--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "nodemon": "^2.0.20"
   },
   "dependencies": {
+    "body-parser": "^1.20.1",
     "ex": "^0.1.4",
     "express": "^4.18.2"
   }
